test/classes/nilability/demo2.good
demo2.chpl:11: error: 'a' cannot be default initialized
note: non-nil class types do not support default initialization
note: Consider using the type borrowed C? instead
